syntax = "proto3";

package dstore;

message SetArg {
    string key = 1;
    bytes value = 2;
}

message GetArg {
    string key = 1;
}

message SetResult {
    bool success = 1;
}

message GetResult {
    bytes value = 1;
    bool success = 2;
}

message Id {
    int32 id = 1;
}

message Addr {
    string addr = 1;
}

message Byte {
    bytes body = 1;
}

service Dstore {
    rpc Set(SetArg) returns (SetResult);
    rpc SetFile(stream Byte) returns (SetResult);
    rpc Get(GetArg) returns (GetResult);
    rpc GetFile(GetArg) returns (stream Byte);
    rpc Del(GetArg) returns (SetResult);

    rpc Join(Addr) returns (Id);
}

service Dnode {
    rpc Del(GetArg) returns (SetResult);
}